@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.467 2007/12/18 19:02:52 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.468 2007/12/20 00:27:54 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -9869,6 +9869,7 @@ Ffigure_mapcontours
 
       set termoption {no}enhanced
       set termoption font "<fontname>{,<fontsize>}"
+      set termoption {solid|dashed}
 
 3 tics
 ?commands set tics
